--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,6 +2,7 @@
 :root {
   --color-bg:#ffffff;
   --color-fg:#1c1c1c;
+  --color-bg-hover: #dedede;
   --color-fg-hover: #3d3d3d;
   --color-inactive: rgba(28,28,28,0.40);
 }
